--- a/ingress.yaml
+++ b/ingress.yaml
@@ -3,7 +3,9 @@ kind: Ingress
 metadata:
   name: cloud
   namespace: production
-
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: 10G
+    nginx.ingress.kubernetes.io/proxy-buffer-size: 400M
 spec:
   tls:
   - hosts:
